This file lists major changes to DataSeries.  The full reverse-chronological
change log (without the merge revisions) can be found in the Changelog.mtn file
in the tar releases, or by using mtn log if you got the sources via version
control.

2011-06-13:
   * Release.  Repositories with packages seem to be functional for the few OSs I can easily test.

2011-05-23:
   * Fixes to get redhat packaging to work on centos, fedora, scilinux, and opensuse.

2011-05-21:
   * Fixes to get debian packaging to work on all supported versions of debian 
     and ubuntu.

2011-04-09: 
   * Add redhat packaging

2011-04-06:
   * Add documentation to lots of programs in the process of generating the
     debian packaging.

2010-11-02:
   * Add dsrecover program that can take a partially written DataSeries file
     and recover any valid extents from it.

2010-08-21:
   * Extend csv2ds to support comment and field separator characters

2010-04-28:
   * Added callback function write before an extent is written allowing a
     program to take action based on the written location of the extent.

2010-02-15:
   * Release

2010-02-15:
   * Add program for testing out the world cup data using the Avro file format.

2010-12-30:
   * DSStatGroupByModule (and hence dsstatgroupby) will now sort output by the
     group by variable.

2009-12-01:
   * Release

2009-11-01:
   * Return type of registerType changed to ExtentType & from ExtentType *
     since it can never be null.

2009-10-31:
   * Added csv2ds program.  Right now it requires you to specify the extent
     type in order to operate.

2009-09-27:
   * Extend dsstatgroupby so that it doesn't need to have a group by column.

2009-09-18:
   * Add TypeFilterModule that generalizes the FilterModule by supporting
     a class in order to select matching extents.

2009-09-07:
   * Support microseconds + seconds with unix epoch in Int64TimeField

2009-08-30:
   * Add sort-cache-sim program that can sort the inputs from traces in request