@@ -3,6 +3,14 @@ change log (without the merge revisions) can be found in the Changelog.mtn file
 in the tar releases, or by using mtn log if you got the sources via version
 control.
 
+Deprecation notes:
+  * direct access to the ExtentSeries::pos member was removed, just remove the .pos part of 
+    your calls and it should all work.  There was no way to deprecate this, so we just disabled it.
+  * getExtent() will be deprecated and replaced with getSharedExtent().  This change enables 
+    read sharing between modules.  See DataSeriesModule.hpp for the rules during the transition.
+
+---------------------------------------------------------------
+
 2011-06-13:
    * Release.  Repositories with packages seem to be functional for the few OSs I can easily test.
 
